Updated config endpoints
