# src/main/kotlin/brightspark/brightereconomy/rest/dto/ConfigDto.kt
@@ -1,0 +1,8 @@
+package brightspark.brightereconomy.rest.dto
+
+data class ConfigDto(
+	val name: String,
+	val value: String,
+	val type: ConfigValueType,
+	val possibleValues: List<String>?
+)
